--- a/index.css
+++ b/index.css
@@ -1,22 +1,41 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: var(--font-family);
+*,
+*::before,
+*::after { 
+  box-sizing: border-box;
+}
+
+html:focus-within {
+    scroll-behavior: smooth;
 }
 
 :root {
-  --purple-100: hsl(254, 88%, 90%);
-  --purple-500: hsl(256, 67%, 59%);
-  --yellow-100: hsl(31, 66%, 93%);
-  --yellow-500: hsl(39, 100%, 71%);
-  --black: hsl(0, 0%, 7%);
-  --white: hsl(0, 0%, 100%);
+  --clr-primary-100: hsl(254, 88%, 90%);
+  --clr-primary-500: hsl(256, 67%, 59%);
+  --clr-secondary-100: hsl(31, 66%, 93%);
+  --clr-secondary-500: hsl(39, 100%, 71%);
+  --clr-black: hsl(0, 0%, 7%);
+  --clr-white: hsl(0, 0%, 100%);
 
-  --p-font-size: 18px;
-  --mobile-font-size: 16px;
-  --desktop-font-size: 18px;
+  --p-fs-500: 1.125rem;
+  --m-fs: 1 rem;
+  --d-fs: 1.125rem;
 
-  --font-bold: 400;
-  --font-semibold: 500;
-  --font-family: "DM Sans", "sans serif";
+  --fw-400: 400;
+  --fw-500: 500;
+  --ff: "DM Sans", "sans serif";
+}
+
+body {
+    display: grid;
+    place-content: center;
+    min-height: 100vh;
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+    margin: 0;
+    font-family: var(--ff);
+}
+
+img {
+    max-width: 100%;
+    display: block;
 }
