--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html:focus-within {
@@ -30,8 +32,6 @@ body {
   place-content: center;
   min-height: 100vh;
   text-rendering: optimizeSpeed;
-  margin: 0;
-  padding: 0.5rem;
   font-family: var(--ff);
 }
 
