--- a/index.css
+++ b/index.css
@@ -167,6 +167,10 @@ img {
   padding-block: 1rem;
 }
 
+.bento-grid .bento-item:nth-child(5) img{
+  width: 150px;
+}
+
 .bento-grid .bento-item:nth-child(6) {
   padding: 1rem;
   display: grid;
@@ -204,35 +208,44 @@ img {
 }
 
 /* For tabs */
-
+/* 
 @media (min-width: 540px) {
   .bento-grid {
     grid-template-columns: repeat(4, 1fr);
     gap: 1.5rem;
   }
-}
+} */
 
 @media (min-width: 768px) {
   .bento-grid {
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 0.5fr);
     gap: 1.5rem;
   }
 
-  .grid-col-span-2 {
-     grid-column: span 2;
-  }
-
-  .grid-row-span-2 {
-    grid-row: span 2;
+  .bento-grid .bento-item:nth-child(1) {
+    grid-column: span 2;
+    grid-row-start: 1;
+    grid-row: span 2.5;
   }
 
   .bento-grid .bento-item:nth-child(7) {
+    grid-row-start: 1;
     grid-column: 1;
-    grid-row: 1;
-  }
-  
-  .bento-grid .bento-item:nth-child(4) {
-    grid-column: 4;
+    grid-row-end: 3;
   }
 
+  .bento-grid .bento-item:nth-child(4) {
+    grid-row-start: 1;
+    grid-column-start: 4;
+    grid-row-end: 3;
+  } 
+
+  .bento-grid .bento-item:nth-child(5) {
+    flex-direction: row;
+    grid-column: span 2;
+    grid-column-start: 3;
+  }
+
+ 
 }
