--- a/index.css
+++ b/index.css
@@ -45,7 +45,6 @@ body {
   line-height: 1;
   font-family: var(--ff);
   background-color: hsl(0, 0%, 95%);
-
 }
 
 img {
@@ -112,6 +111,15 @@ img {
 .bento-grid {
   padding: 1rem;
   display: grid;
+  grid-template-areas:
+    "one"
+    "two"
+    "three"
+    "four"
+    "five"
+    "six"
+    "seven"
+    "eight";
   gap: 1rem;
   margin-inline: auto;
 }
@@ -157,6 +165,10 @@ img {
   gap: 1em;
 }
 
+.bento-grid .bento-item:nth-child(4) img {
+  width: 250px;
+}
+
 .bento-grid .bento-item:nth-child(5) {
   display: flex;
   flex-direction: column;
@@ -167,7 +179,7 @@ img {
   padding-block: 1rem;
 }
 
-.bento-grid .bento-item:nth-child(5) img{
+.bento-grid .bento-item:nth-child(5) img {
   width: 150px;
 }
 
@@ -207,45 +219,52 @@ img {
   width: 100%;
 }
 
+.bento-item:nth-child(1){
+   grid-area: one;
+}
+
+.bento-item:nth-child(2){
+  grid-area: two;
+}
+
+.bento-item:nth-child(3){
+  grid-area: three;
+}
+
+.bento-item:nth-child(4){
+  grid-area: four;
+}
+
+.bento-item:nth-child(5){
+  grid-area: five;
+}
+
+.bento-item:nth-child(6){
+  grid-area: six;
+}
+
+.bento-item:nth-child(7){
+  grid-area: seven;
+}
+
+.bento-item:nth-child(8){
+  grid-area: eight;
+}
+
 /* For tabs */
-/* 
+
 @media (min-width: 540px) {
   .bento-grid {
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1.5rem;
+    grid-template-areas:
+      "seven one one four"
+      "seven one one four"
+      "seven one one four"
+      "seven one one four"
+      "seven two three four"
+      "eight two three four"
+      "eight two three four "
+      "eight six five five"
+      "eight six five five"
+      "eight six five five";
   }
-} */
-
-@media (min-width: 768px) {
-  .bento-grid {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 0.5fr);
-    gap: 1.5rem;
-  }
-
-  .bento-grid .bento-item:nth-child(1) {
-    grid-column: span 2;
-    grid-row-start: 1;
-    grid-row: span 2.5;
-  }
-
-  .bento-grid .bento-item:nth-child(7) {
-    grid-row-start: 1;
-    grid-column: 1;
-    grid-row-end: 3;
-  }
-
-  .bento-grid .bento-item:nth-child(4) {
-    grid-row-start: 1;
-    grid-column-start: 4;
-    grid-row-end: 3;
-  } 
-
-  .bento-grid .bento-item:nth-child(5) {
-    flex-direction: row;
-    grid-column: span 2;
-    grid-column-start: 3;
-  }
-
- 
 }
