--- a/index.css
+++ b/index.css
@@ -256,6 +256,8 @@ img {
 
 @media (min-width: 540px) {
   .bento-grid {
+    grid-auto-rows: 75px;
+    grid-auto-columns: 1fr;
     grid-template-areas:
       "seven one one four"
       "seven one one four"
