--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ html:focus-within {
 
 body {
   display: grid;
-  place-content: center;
+  place-items: center;
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1;
