--- a/index.css
+++ b/index.css
@@ -273,7 +273,7 @@ img {
   .bento-grid {
     padding: 8rem;
     overflow: hidden;
-    grid-auto-rows: minmax(50px, auto);
+    grid-auto-rows: minmax(60px, auto);
     grid-template-areas:
       "seven one one four"
       "seven one one four"
@@ -294,6 +294,11 @@ img {
     top: 80px;
     object-position: left;
     object-fit: cover;
+  }
+
+  .bento-grid .bento-item:nth-child(4) p {
+    margin-top: 1.5rem;
+
   }
 
   .bento-grid .bento-item:nth-child(5) {
