--- a/index.css
+++ b/index.css
@@ -252,28 +252,6 @@ img {
 
 /* For tabs */
 @media (min-width: 500px) {
-  /* Typography */
-
-  .xlg-text {
-    font-size: var(--xlg);
-    font-weight: var(--fw-500);
-  }
-
-  .lg-text {
-    font-size: var(--lg);
-    font-weight: var(--fw-500);
-  }
-
-  .med-text {
-    font-size: var(--med);
-    font-weight: var(--fw-500);
-  }
-
-  .sm-text {
-    font-size: var(--sm);
-    font-weight: var(--fw-400);
-  }
-
   .bento-grid {
     grid-template-areas:
       "seven seven seven"
@@ -291,7 +269,7 @@ img {
   .bento-grid {
     padding: 8rem;
     overflow: hidden;
-    grid-auto-rows: auto;
+    grid-auto-rows: minmax(60px, 1fr);
     grid-template-areas:
       "seven one one four"
       "seven one one four"
@@ -325,12 +303,5 @@ img {
     display: grid;
     place-items: center;
     padding: 1.5rem 1.5rem;
-  }
-
-  .bento-grid .bento-item:nth-child(8) {
-    padding-bottom: 0rem;
-  }
-  .bento-grid .bento-item:nth-child(8) img {
-    width: 100%;
   }
 }
