--- a/index.css
+++ b/index.css
@@ -158,18 +158,14 @@ img {
 
 .bento-grid .bento-item:nth-child(4) {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   flex-direction: column;
-  gap: 2rem;
-  padding-inline: 1.5rem;
-  padding-block: 1.2rem;
+  justify-content: space-between;
+  padding: 1.2rem 1.5rem;
   text-align: center;
-  position: relative;
 }
 
-.bento-grid .bento-item:nth-child(4) img {
-  padding-left: 1rem;
+.img-container-4 {
+  position: relative;
 }
 
 .bento-grid .bento-item:nth-child(5) {
@@ -210,12 +206,6 @@ img {
 .bento-grid .bento-item:nth-child(8) img {
   width: 150px;
   margin-top: 1em;
-}
-
-/* footer */
-
-.attribution {
-  width: 100%;
 }
 
 .bento-item:nth-child(1) {
@@ -269,7 +259,7 @@ img {
   .bento-grid {
     padding: 8rem;
     overflow: hidden;
-    grid-auto-rows: minmax(60px, 1fr);
+    /* grid-auto-rows: minmax(60px, auto); */
     grid-template-areas:
       "seven one one four"
       "seven one one four"
@@ -283,14 +273,11 @@ img {
       "eight six five five";
   }
 
+  .bento-grid .bento-item:nth-child(4) {
+    text-align: left;
+  }
   .bento-grid .bento-item:nth-child(4) img {
-    position: absolute;
-    height: 50%;
-    right: 0;
-    top: 100px;
-    bottom: 80px;
-    object-position: left;
-    object-fit: cover;
+    height: 200px;
   }
 
   .bento-grid .bento-item:nth-child(5) {
@@ -302,6 +289,6 @@ img {
   .bento-grid .bento-item:nth-child(7) {
     display: grid;
     place-items: center;
-    padding: 1.5rem 1.5rem;
+    padding: 1.5rem;
   }
 }
