--- a/index.css
+++ b/index.css
@@ -165,8 +165,6 @@ img {
   position: relative;
 }
 
-
-
 .bento-grid .bento-item:nth-child(5) {
   padding-inline: 2rem;
   padding-block: 1rem;
@@ -258,7 +256,7 @@ img {
   .bento-grid {
     padding: 8rem;
     overflow: hidden;
-    /* grid-auto-rows: minmax(60px, auto); */
+    grid-auto-rows: minmax(60px, auto);
     grid-template-areas:
       "seven one one four"
       "seven one one four"
@@ -275,8 +273,20 @@ img {
   .bento-grid .bento-item:nth-child(4) {
     text-align: left;
   }
+  
   .bento-grid .bento-item:nth-child(4) img {
-    height: 200px;
+    height: 300px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding-left: 1.5rem;
+  }
+
+  .bento-grid .bento-item:nth-child(4) p {
+   position: absolute;
+   bottom: 0;
+   padding-bottom: 0.5rem;
   }
 
   .bento-grid .bento-item:nth-child(5) {
