--- a/index.css
+++ b/index.css
@@ -162,22 +162,19 @@ img {
 }
 
 .bento-grid .bento-item:nth-child(4) {
+  display: grid;
   padding: 1.2rem 1.5rem;
   text-align: center;
-  position: relative;
+}
 
-  img {
-    width: 300px;
-    @media screen and (min-width: 768px) {
-      max-width: 100%;
-      height: 250px;
-      text-align: left;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      position: absolute;
-      padding-left: 1.5rem;
-    }
+.img {
+  background-image: url("./assets/images/illustration-schedule-posts.webp")  no-repeat;
+  background-size: cover;
+  z-index: -1;
+
+  @media screen and (min-width: 768px) {
+    max-width: 100%;
+    height: 250px;
   }
 }
 
